appId: app.vaultaire.ios
---
# Enter select mode and select files
- runFlow: ../helpers/launch_with_files.yaml

# Enter select mode
- tapOn:
    id: "vault_select_button"

# Select all
- tapOn:
    id: "vault_select_all"

# Exit select mode
- tapOn:
    id: "vault_edit_done"
